--- a/style.css
+++ b/style.css
@@ -1826,6 +1826,11 @@ body:not(.has-header-image):not(.has-header-video) .custom-header-media {
 13.2 Front Page
 --------------------------------------------------------------*/
 
+.twentyseventeen-front-page.page-one-column .entry-header {
+    /* Hide home section title when theme set to one column */
+    display: none;
+}
+
 .twentyseventeen-front-page .site-content {
     padding: 0;
 }
@@ -1877,7 +1882,7 @@ body:not(.has-header-image):not(.has-header-video) .custom-header-media {
 
 /* Panel edit link */
 
-.twentyseventeen-panel .edit-link {
+.twentyseventeen-panel .entry-header .edit-link {
     display: block;
     margin: 0.3em 0 0;
 }
@@ -1896,7 +1901,7 @@ body:not(.has-header-image):not(.has-header-video) .custom-header-media {
     margin-bottom: 3em;
 }
 
-.recent-posts {
+.recent-posts .entry-header {
     margin-bottom: 1.2em;
 }
 
@@ -3733,14 +3738,13 @@ object {
     .background-fixed .panel-image {
         background-attachment: fixed;
     }
-    .page-two-column .panel-content {
+    .page-two-column .panel-content .entry-header {
         float: left;
         width: 36%;
     }
-    .page-two-column .panel-content {
-        float: none;
-        clear: both;
-        width: 100%;
+    .page-two-column .panel-content .entry-content {
+        float: right;
+        width: 58%;
     }
     /* Front Page - Recent Posts */
     .page-two-column .panel-content .recent-posts {
