Set background image option for front-page sections.

--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ h4,
 h5,
 h6 {
     clear: both;
-    line-height: 1.4;
+    line-height: 1.2;
 }
 
 h1:first-child,
@@ -500,7 +500,7 @@ p {
     margin: 0 0 1.5em;
     padding: 0;
     font-family: "Montserrat", "Helvetica Neue", helvetica, arial, sans-serif;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 dfn,
@@ -1348,7 +1348,7 @@ a:hover .nav-title,
 }
 
 .navigation-top .wrap {
-    max-width: 1000px;
+    max-width: 80%;
     padding: 0;
 }
 
@@ -1562,7 +1562,7 @@ body {
 .wrap {
     margin-left: auto;
     margin-right: auto;
-    max-width: 700px;
+    max-width: 80%;
     padding-left: 2em;
     padding-right: 2em;
 }
@@ -1840,7 +1840,8 @@ body:not(.has-header-image):not(.has-header-video) .custom-header-media {
     position: relative;
 }
 
-.panel-image {
+.panel-image,
+.panel-content#with-bg {
     /* Parallax effect */
     background-attachment: fixed;
     background-position: center;
@@ -1870,8 +1871,16 @@ body:not(.has-header-image):not(.has-header-video) .custom-header-media {
     border-top: 1px solid #ddd;
 }
 
+.twentyseventeen-front-page .wrap {
+    max-width: 70%;
+}
+
 .panel-content {
     position: relative;
+}
+
+.panel-content#with-bg {
+    color: white!important;
 }
 
 .panel-content .wrap {
@@ -3304,23 +3313,23 @@ object {
         font-size: 1.125rem;
     }
     h1 {
-        font-size: 30px;
-        font-size: 1.875rem;
+        font-size: 36px;
+        font-size: 2.85rem;
     }
     h2,
     h3,
     .home.blog .entry-title,
     .page .panel-content .recent-posts .entry-title {
-        font-size: 26px;
-        font-size: 1.8rem;
+        font-size: 32px;
+        font-size: 2.7rem;
     }
     h4 {
-        font-size: 22px;
-        font-size: 1.4rem;
+        font-size: 27px;
+        font-size: 2.2rem;
     }
     h5 {
-        font-size: 17px;
-        font-size: 1.2rem;
+        font-size: 22px;
+        font-size: 1.8rem;
     }
     h6 {
         font-size: 15px;
@@ -3348,9 +3357,6 @@ object {
     .panel-content .wrap {
         padding-bottom: 2em;
         padding-top: 3.5em;
-    }
-    .page-one-column .panel-content .wrap {
-        max-width: 740px;
     }
     .panel-content .entry-header {
         margin-bottom: 4.5em;
@@ -3408,7 +3414,7 @@ object {
     }
     /* Layout */
     .wrap {
-        max-width: 1000px;
+        max-width: 80%;
         padding-left: 3em;
         padding-right: 3em;
     }
@@ -3502,7 +3508,7 @@ object {
         z-index: 3;
     }
     .navigation-top .wrap {
-        max-width: 1000px;
+        max-width: 80%;
         /* The font size is 14px here and we need 50px padding in ems */
         padding: 0.75em 3.4166666666667em;
     }
