--- a/editor-style-shared.css
+++ b/editor-style-shared.css
@@ -38,6 +38,13 @@
 .heading-4{
   font-size: 27px;
   font-size: 1.5rem;
+  font-weight: 600;
+  font-family: "Raleway", "Helvetica Neue", helvetica, arial, sans-serif;
+  line-height: 1.0;
+}
+.heading-5{
+  font-size: 27px;
+  font-size: 1.5rem;
   font-weight: 400;
   font-family: "Raleway", "Helvetica Neue", helvetica, arial, sans-serif;
   line-height: 1.0;
@@ -72,6 +79,13 @@
       font-family: "Raleway", "Helvetica Neue", helvetica, arial, sans-serif;
       font-size: 27px;
       font-size: 1.2rem;
+      font-weight: 600;
+      line-height: 1.0;
+    }
+    .heading-5{
+      font-family: "Raleway", "Helvetica Neue", helvetica, arial, sans-serif;
+      font-size: 27px;
+      font-size: 1.2rem;
       font-weight: 400;
       line-height: 1.0;
     }
@@ -80,29 +94,24 @@
 @media screen and (max-width: 700px) {
   .heading-1{
     font-family: "Montserrat", "Helvetica Neue", helvetica, arial, sans-serif;
-    font-size: 45px;
-    font-size: 3.0rem;
     font-weight: 300;
   }
 
   .heading-2{
-    font-size: 37px;
-    font-size: 2.0rem;
-    font-weight: 300;
     font-family: "Raleway", "Helvetica Neue", helvetica, arial, sans-serif;
     font-weight: 500;
   }
 
   .heading-3{
-    font-size: 32px;
-    font-size: 1.0rem;
     font-family: "Raleway", "Helvetica Neue", helvetica, arial, sans-serif;
     font-weight: 600;
   }
 
   .heading-4{
-    font-size: 27px;
-    font-size: 2.5rem;
+    font-family: "Raleway", "Helvetica Neue", helvetica, arial, sans-serif;
+    font-weight: 600;
+  }
+  .heading-5{
     font-family: "Raleway", "Helvetica Neue", helvetica, arial, sans-serif;
     font-weight: 400;
   }
