--- a/style.css
+++ b/style.css
@@ -1374,6 +1374,9 @@ a:hover .nav-title,
     clear: both;
     display: block;
 }
+#nav-slogan{
+    display:none;
+}
 @media screen and (max-width: 48em){
     #menu-logo{
         display: block;
